--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlConnection": "Server=.\\SQLEXPRESS; Database=BcStore; Integrated Security=True;TrustServerCertificate=True"
+  }
 }
