--- a/WebApi/nlog.config
+++ b/WebApi/nlog.config
@@ -9,9 +9,25 @@
 		<target name="logfile" xsi:type="File"
 				fileName=".\logs\${shortdate}_logfile.txt"
 				layout="${longdate} ${level:uppercase=true} ${message}"/>
+		<target name="gmail" xsi:type="Mail"
+				
+				 subject="${level:uppercase=true}"
+           body="${longdate} ${level:uppercase=true} ${message}"
+        
+            smtpServer="smtp.gmail.com"
+            smtpPort="587"
+            smtpAuthentication="Basic"
+            smtpUserName="thisrakyazilim@gmail.com"
+            smtpPassword="wivgyaceowasozip"
+            enableSsl="true"
+            from="thisrakyazilim@gmail.com"
+            to="thisrakyazilim@gmail.com"
+            cc="thisrakyazilim@gmail.com"
+          />
 	</targets>
 
 	<rules>
+		<logger name="*" minlevel="Debug" writeTo="gmail" />
 		<logger name="*" minlevel="Debug" writeTo="logfile" />
 	</rules>
 </nlog>
