--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "sqlConnection": "Server=.\\SQLEXPRESS; Database=BcStore; Integrated Security=True;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "validIssuer": "bcstoreapi",
+    "validAudience": "http://localhost:5215",
+    "secretKey": "burakyasinuyanik",
+    "expires": 60
   }
 }
